--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -1,20 +1,44 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseBack.html.twig' %}
+<!DOCTYPE html>
 
-{% block title %}Hello ProduitController!{% endblock %}
+<title>Produit index</title>
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Produit index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Ref_produit</th>
+                <th>Libelle</th>
+                <th>Description</th>
+                <th>Image</th>
+                <th>Prix_vente</th>
+                <th>Quantite</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for produit in produits %}
+            <tr>
+                <td>{{ produit.refProduit }}</td>
+                <td>{{ produit.libelle }}</td>
+                <td>{{ produit.description }}</td>
+                <td>{{ produit.image }}</td>
+                <td>{{ produit.prixVente }}</td>
+                <td>{{ produit.quantite }}</td>
+                <td>
+                    <a href="{{ path('app_produit_show', {'ref_produit': produit.ref_produit}) }}">show</a>
+                    <a href="{{ path('app_produit_edit', {'ref_produit': produit.ref_produit}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="7">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/USER/Desktop/SprintWeb/Elbaldi/src/Controller/ProduitController.php'|file_link(0) }}">src/Controller/ProduitController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/USER/Desktop/SprintWeb/Elbaldi/templates/produit/index.html.twig'|file_link(0) }}">templates/produit/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_produit_new') }}">Create new</a>
 {% endblock %}
