--- a/templates/question/edit.html.twig
+++ b/templates/question/edit.html.twig
@@ -5,9 +5,9 @@
 		<h1 style="font-weight: bold;">Modifier Quiz</h1>
 	</div>
 
-	{{ include('question/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('question/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-	<a href="{{ path('app_question_index') }}">back to list</a>
+{# <a href="{{ path('app_question_index') }}">Retour</a> #}
 
-	{{ include('question/_delete_form.html.twig') }}
+	{# {{ include('question/_delete_form.html.twig') }} #}
 {% endblock %}
