--- a/templates/question/index.html.twig
+++ b/templates/question/index.html.twig
@@ -1,42 +1,56 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block body %}
+	<div class="container">
 
-
-	{% for question in questions %}
-
-		<div class="card mb-3">
-			<div class="card-body">
-				<h5 class="card-title">{{ question.questionn }}</h5>
-				<p class="card-text">
-					<strong>Difficulte :</strong>
-					{{ question.difficulte }}<br>
-					<strong>Reponse 1 :</strong>
-					{{ question.reponse1 }}<br>
-					<strong>Reponse 2 :</strong>
-					{{ question.reponse2 }}<br>
-					<strong>Reponse 3 :</strong>
-					{{ question.reponse3 }}<br>
-					<strong>Solution :</strong>
-					{{ question.solution }}<br>
-					<strong>Id_Quiz :</strong>
-					{{ question.idQuiz.getIdQuiz() }}
-
-				</p>
-				<div class="d-flex justify-content-end">
-					<a href="{{ path('app_question_edit', {'idQuestion': question.idQuestion}) }}" class="btn btn-secondary">Modifier</a>
-
-					{{ include('question/_delete_form.html.twig') }}
-				</div>
+		<div class="row">
+			<div class="col-12 mb-4 d-flex align-items-center">
+				<i class="bi bi-file-plus" style="font-size: 30px; margin-right: 5px; "></i>
+				<a href="{{ path('app_question_new') }}" class="btn btn-success custom-btn float-right">Ajouter Question</a>
 			</div>
-		</div>
-	{% else %}
-		<div class="alert alert-warning" role="alert">
-			No records found.
-		</div>
-	{% endfor %}
+			{% for question in questions %}
 
-	<div class="text-center">
-		<a href="{{ path('app_question_new') }}" class="btn btn-success">Create new</a>
-	</div>
-{% endblock %}
+				<div class="card mb-3">
+					<div class="row no-gutters">
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Question :
+									{{ question.questionn }}</h5>
+								<p class="card-text">
+									<strong>Difficulte :</strong>
+									{{ question.difficulte }}<br>
+									<strong>Reponse 1 :</strong>
+									{{ question.reponse1 }}<br>
+									<strong>Reponse 2 :</strong>
+									{{ question.reponse2 }}<br>
+									<strong>Reponse 3 :</strong>
+									{{ question.reponse3 }}<br>
+									<strong>Solution :</strong>
+									{{ question.solution }}<br>
+									<strong>Id_Quiz :</strong>
+									{{ question.idQuiz.getIdQuiz() }}
+								</p>
+								<div class="d-flex justify-content-end">
+									<div class="d-flex justify-content-between">
+										<a href="{{ path('app_question_edit', {'idQuestion': question.idQuestion}) }}" class="btn btn-success custom-btn mr-2">Modifier</a>
+										<form method="post" action="{{ path('app_question_delete', {'idQuestion': question.idQuestion}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+											<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ question.idQuestion) }}">
+											<button type="submit" class="btn btn-success custom-btn">Supprimer</button>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 d-flex align-items-center justify-content-center">
+							<img src="{{ asset('/Back/img/question.png') }}" style="margin-top: -25px; width: 50%;" class="img-fluid" alt="Image">
+						</div>
+					</div>
+				</div>
+
+
+			{% else %}
+				<div class="alert alert-warning" role="alert">
+					Aucune question trouvé.
+				</div>
+			{% endfor %}
+		{% endblock %}
