--- a/templates/question/new.html.twig
+++ b/templates/question/new.html.twig
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-
-<title>New Question</title>
+{% extends 'baseBack.html.twig' %}
 
 {% block body %}
-    <h1>Create new Question</h1>
+	<h1>Ajouter une question</h1>
 
-    {{ include('question/_form.html.twig') }}
+	{{ include('question/_form.html.twig') }}
 
-    <a href="{{ path('app_question_index') }}">back to list</a>
+
 {% endblock %}
