mise a jour des crud

--- a/templates/add.html.twig
+++ b/templates/add.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseBack.html.twig' %}
+{% extends 'baseFront.html.twig' %}
 {% block body %}
 <p> on écrit le code ici </p>
 {% endblock %}
