--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -168,7 +168,7 @@
 
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" ">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('app_categorie_index')}} ">
 						<i style="color: #000000;" class="bi bi-boxes"></i>
 						<span>catégories</span>
 					</a>
