--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -168,7 +168,7 @@
 
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" ">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" >
 						<i style="color: #000000;" class="bi bi-boxes"></i>
 						<span>catégories</span>
 					</a>
@@ -179,7 +179,7 @@
 
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" ">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('app_commande_index')}}" >
 						<i style="color: #000000;" class="bi bi-box"></i>
 						<span>Commandes</span>
 					</a>
@@ -188,7 +188,7 @@
 
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" ">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('app_livraison_index')}}">
 						<i style="color: #000000;" class="bi bi-truck"></i>
 						<span>Livraison</span>
 					</a>
