--- a/templates/question/add.html.twig
+++ b/templates/question/add.html.twig
@@ -1,4 +1,5 @@
-{{ form_start(form) }}
+{{form_start(form,{'attr':{'novalidate':'novalidate'}})}}
+
 <div class="form-group row">
 	<label for="{{ form.nom.vars.id }}" class="col-sm-2 col-form-label">{{ form.nom.vars.label }}</label>
 	<div class="col-sm-8">
