--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -7,6 +7,7 @@
   <title>{% block title %} Sailor Bootstrap Template - Index{% endblock %}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- Favicons -->
   <link href="{{asset('Front/img/favicon.png')}}" rel="icon">
