--- a/templates/categorie/_form.html.twig
+++ b/templates/categorie/_form.html.twig
@@ -1,14 +1,16 @@
-{{ form_start(form) }}
+{{ form_start(form,{'attr':{'novalidate':'novalidate'}})}}
     <div class="form-group row">
         <label for="{{ form.nom_categorie.vars.id }}" class="col-sm-2 col-form-label">{{ form.nom_categorie.vars.label }}</label>
         <div class="col-sm-8">
             {{ form_widget(form.nom_categorie, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.nom_categorie) }}
         </div>
     </div>
     <div class="form-group row">
         <label for="{{ form.description.vars.id }}" class="col-sm-2 col-form-label">{{ form.description.vars.label }}</label>
         <div class="col-sm-8">
             {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.description) }}
         </div>
     </div>
     <div class="form-group row text-center">
