--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -5,22 +5,26 @@
         <h1>Modifier le produit "{{ produit.libelle }}"</h1>
         <div class="row">
             <div class="col-md-6">
-                {{ form_start(form) }}
+                {{ form_start(form,{'attr':{'novalidate':'novalidate'}})}}
                  <div class="form-group">
                     {{ form_label(form.ref_produit) }}
                     {{ form_widget(form.ref_produit, {'attr': {'class': 'form-control'}}) }}
+                     {{ form_errors(form.ref_produit) }}
                 </div>
                 <div class="form-group">
                     {{ form_label(form.libelle) }}
                     {{ form_widget(form.libelle, {'attr': {'class': 'form-control'}}) }}
+                     {{ form_errors(form.libelle) }}
                 </div>
                 <div class="form-group">
                     {{ form_label(form.description) }}
                     {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                    {{ form_errors(form.description) }}
                 </div>
                 <div class="form-group">
                     {{ form_label(form.prixVente) }}
                     {{ form_widget(form.prixVente, {'attr': {'class': 'form-control'}}) }}
+                     {{ form_errors(form.prixVente) }}
                 </div>
                 <div class="form-group">
                     {{ form_label(form.categorie) }}
@@ -29,6 +33,7 @@
                 <div class="form-group">
                     {{ form_label(form.image) }}
                     {{ form_widget(form.image, {'attr': {'class': 'form-control-file'}}) }}
+                      {{ form_errors(form.image) }}
                 </div>
                 <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
                 
