--- a/templates/produitFront/indexFront.html.twig
+++ b/templates/produitFront/indexFront.html.twig
@@ -1,35 +1,49 @@
-{% extends 'baseFront.html.twig' %}
+
+
+    {% extends 'baseFront.html.twig' %}
 
 {% block body %}
-      <div class="container">
+    <script>
+         $(document).ready(function() {
+        $('#portfolio-flters li').click(function() {
+            var categorie = $(this).text();
+            $('#portfolio-flters li').removeClass('filter-active');
+            $(this).addClass('filter-active');
+            $('.portfolio-container .portfolio-item').filter(function() {
+               return $(this).data('categorie') === categorie;
+            }).show();
+            $('.portfolio-container .portfolio-item').filter(function() {
+                return $(this).data('categorie') != categorie;
+            }).hide();
+        });
+    });
+    </script>
+    <div class="row">
+    <div class="col-lg-12 d-flex justify-content-center">
+        <ul id="portfolio-flters">
+            <li data-filter="*" class="filter-active">Tout</li>
+            {% for categorie in categories %}
+<li data-filter=".filter-{{ categorie.nomCategorie|replace({' ':'-'}) }}">{{ categorie.nomCategorie }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container">
-     {% for produit in produits %}
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+<div class="row portfolio-container">
+    {% for produit in produits %}
+<div class="col-lg-4 col-md-6 portfolio-item filter-app filter-{{ produit.categorie.nomCategorie|replace({' ':'-'}) }}" data-categorie="{{ produit.categorie.nomCategorie|replace({' ':'-'}) }}">
             <div class="portfolio-wrap">
-              <img src="{{ asset('images/' ~ produit.image) }}" class="img-fluid" style="width: 420px; height: 180px;">
-              <div class="portfolio-info">
-                <h4>{{ produit.libelle }}</h4>
-                <p>{{ produit.prixVente }}</p>
-                <div class="portfolio-links">
-                  <a href="{{ asset('images/' ~ produit.image) }}" data-gallery="portfolioGallery" class="portfolio-lightbox" title={{ produit.libelle }}><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <img src="{{ asset('images/' ~ produit.image) }}" class="img-fluid" style="width: 480px; height: 180px;">
+                <div class="portfolio-info">
+                    <h4>{{ produit.libelle }}</h4>
+                    <p>{{ produit.prixVente }}</p>
+                    <div class="portfolio-links">
+                        <a href="{{ asset('images/' ~ produit.image) }}" data-gallery="portfolioGallery" class="portfolio-lightbox" title={{ produit.libelle }}><i class="bx bx-plus"></i></a>
+                        <a href="{{ path('produit_details', {'ref_produit': produit.ref_produit}) }}" class="portfolio-details-lightbox" data-glightbox="type: external" title="Produit Details"><i class="bx bx-link"></i></a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-        {% endfor %}
-
-      </div>
-    {% endblock %}
+        </div>
+    {% endfor %}
+</div>
+{% endblock %}
