--- a/public/Front/css/style.css
+++ b/public/Front/css/style.css
@@ -9,6 +9,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+.form-commande {
+  margin-top: 20px;
+}
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
