--- a/templates/commande/edit.html.twig
+++ b/templates/commande/edit.html.twig
@@ -8,7 +8,7 @@ Edit Commande
 {% block body %}
     <h1>Edit Commande</h1>
 
-    {{ include('commande/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('commande/_form2.html.twig') }}
 
     <a href="{{ path('app_commande_index') }}">back to list</a>
 
