--- a/templates/commande/show.html.twig
+++ b/templates/commande/show.html.twig
@@ -2,39 +2,51 @@
 
 
 {% block title %}
-New Commande
+	New Commande
 {% endblock %}
 {% block body %}
-    <h1>Commande</h1>
+	<h1>Commande</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>IdCmd</th>
-                <td>{{ commande.idCmd }}</td>
-            </tr>
-            <tr>
-                <th>Etat</th>
-                <td>{{ commande.etat }}</td>
-            </tr>
-            <tr>
-                <th>DateCmd</th>
-                <td>{{ commande.dateCmd ? commande.dateCmd|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Total</th>
-                <td>{{ commande.total }}</td>
-            </tr>
-            <tr>
-                <th>Adresse</th>
-                <td>{{ commande.adresse }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>IdCmd</th>
+				<td>{{ commande.idCmd }}</td>
+			</tr>
+			<tr>
+				<th>Etat</th>
+				<td>{{ commande.etat }}</td>
+			</tr>
+			<tr>
+				<th>DateCmd</th>
+				<td>{{ commande.dateCmd ? commande.dateCmd|date('Y-m-d') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Total</th>
+				<td>{{ commande.total }}</td>
+			</tr>
+			<tr>
+				<th>nom et prenom</th>
+				<td>{{ commande.idPanier.idUser.nom ~ ' ' ~ commande.idPanier.idUser.prenom }}</td>
+			</tr>
+			<tr>
+				<th>Adresse</th>
+				<td>{{ commande.adresse }}</td>
+			</tr>
+			<tr>
+				<th>numero telephone</th>
+				<td>{{ commande.idPanier.idUser.numtel }}</td>
+			</tr>
+			<tr>
+				<th>Adresse</th>
+				<td>{{ commande.idPanier.idUser.email }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_commande_index') }}">back to list</a>
+	<a href="{{ path('app_commande_index') }}">back to list</a>
 
-    <a href="{{ path('app_commande_edit', {'idCmd': commande.idCmd}) }}">edit</a>
+	<a href="{{ path('app_commande_edit', {'idCmd': commande.idCmd}) }}">edit</a>
 
-    {{ include('commande/_delete_form.html.twig') }}
+	{{ include('commande/_delete_form.html.twig') }}
 {% endblock %}
