--- a/templates/quizFront/index.html.twig
+++ b/templates/quizFront/index.html.twig
@@ -28,7 +28,7 @@
 							</h4>
 							<div class="col-md-4 d-flex align-items-center justify-content-center">
 
-								<a href="{{ path('app_question_index', {'idQuiz': quiz.idQuiz}) }}" class="btn btn-success custom-btn">Jouer</a>
+								<a href="{{ path('app_question_indecx', {'idQuiz': quiz.idQuiz}) }}" class="btn btn-success custom-btn">Jouer</a>
 
 							</div>
 						</div>
