--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -6,7 +6,7 @@
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<title>
 			{% block title %}
-				Sailor Bootstrap Template - Index
+				Elbaldi
 			{% endblock %}
 		</title>
 		<meta content="" name="description">
@@ -14,9 +14,9 @@
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 		<!-- Favicons -->
-		<link href="{{asset('Front/img/favicon.png')}}" rel="icon">
+		<link href="{{asset('Back/img/elbaldi.jpg')}}" rel="icon">
 		<link
-		href="{{asset('Front/img/apple-touch-icon.png ')}}" rel="apple-touch-icon">
+		href="{{asset('Back/img/elbaldi.jpg ')}}" rel="apple-touch-icon">
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -36,12 +36,12 @@
 			href="{{asset('Front/css/style.css')}}" rel="stylesheet">
 
 		<!-- =======================================================
-																						  * Template Name: Sailor
-																						  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-																						  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-																						  * Author: BootstrapMade.com
-																						  * License: https://bootstrapmade.com/license/
-																						  ======================================================== -->
+																																																																								  * Template Name: Sailor
+																																																																								  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+																																																																								  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+																																																																								  * Author: BootstrapMade.com
+																																																																								  * License: https://bootstrapmade.com/license/
+																																																																								  ======================================================== -->
 		{% endblock %}
 	</head>
 
@@ -50,12 +50,12 @@
 		<!-- ======= Header ======= -->
 		<header id="header" class="fixed-top d-flex align-items-center">
 			<div class="container d-flex align-items-center">
+				<a href="index.html" class="logo me-auto"><img src="{{asset('Back/img/elbaldi.jpg ')}}" alt="" class="img-fluid"></a>
 
 				<h1 class="logo me-auto">
 					<a href="index.html">Elbaldi</a>
 				</h1>
-				<!-- Uncomment below if you prefer to use an image logo -->
-				<!-- <a href="index.html" class="logo me-auto"><img src="{{asset('Front/img/logo.png ')}}" alt="" class="img-fluid"></a>-->
+
 
 				<nav id="navbar" class="navbar">
 					<ul>
@@ -73,7 +73,7 @@
 							<a href="portfolio.html">Evènements</a>
 						</li>
 						<li>
-							<a href="pricing.html">Quiz</a>
+							<a href="{{path('app_quiz_indexc')}}">Quiz</a>
 						</li>
 
 						<li>
@@ -109,8 +109,8 @@
 							<div class="col-lg-6 pt-4 pt-lg-0">
 								<p>
 									Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-																																																																																															              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-																																																																																															              culpa qui officia deserunt mollit anim id est laborum
+																																																																																																																																																																																																																																																																																																																																              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+																																																																																																																																																																																																																																																																																																																																              culpa qui officia deserunt mollit anim id est laborum
 								</p>
 								<ul>
 									<li>
@@ -125,7 +125,7 @@
 								</ul>
 								<p class="fst-italic">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-																																																																																															              magna aliqua.
+																																																																																																																																																																																																																																																																																																																																              magna aliqua.
 								</p>
 							</div>
 						</div>
@@ -434,134 +434,122 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="footer-info">
 								<h3>Elbaldi</h3>
-								<p>
-									A108 Adam Street
-									<br>
-									NY 535022, USA<br><br>
-									<strong>Phone:</strong>
-									+1 5589 55488 55<br>
-									<strong>Email:</strong>
-									info@example.com<br>
-								</p>
 
-								<div class="social-links mt-3">
-									<a href="#" class="twitter">
-										<i class="bx bxl-twitter"></i>
-									</a>
-									<a href="#" class="facebook">
-										<i class="bx bxl-facebook"></i>
-									</a>
-									<a href="#" class="instagram">
-										<i class="bx bxl-instagram"></i>
-									</a>
-									<a href="#" class="google-plus">
-										<i class="bx bxl-skype"></i>
-									</a>
-									<a href="#" class="linkedin">
-										<i class="bx bxl-linkedin"></i>
-									</a>
-								</div>
+								<strong>Phone:</strong>
+								+216 72 569 483<br>
+								<strong>Email:</strong>
+								Elbaldi@gmail.tn<br>
+							</p>
+
+							<div class="social-links mt-3">
+								<a href="#" class="twitter">
+									<i class="bx bxl-twitter"></i>
+								</a>
+								<a href="#" class="facebook">
+									<i class="bx bxl-facebook"></i>
+								</a>
+								<a href="#" class="instagram">
+									<i class="bx bxl-instagram"></i>
+								</a>
+								<a href="#" class="google-plus">
+									<i class="bx bxl-skype"></i>
+								</a>
+								<a href="#" class="linkedin">
+									<i class="bx bxl-linkedin"></i>
+								</a>
 							</div>
 						</div>
+					</div>
 
-						<div class="col-lg-2 col-md-6 footer-links">
-							<h4>Useful Links</h4>
-							<ul>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Home</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">About us</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Services</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Terms of service</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Privacy policy</a>
-								</li>
-							</ul>
-						</div>
+					<div class="col-lg-2 col-md-6 footer-links">
+						<h4>Liens utils</h4>
+						<ul>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Profil</a>
+							</li>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Produits
+								</a>
+							</li>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Bons plans</a>
+							</li>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Evènements</a>
+							</li>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="{{path('app_quiz_indexc')}}">Quiz</a>
+							</li>
+						</ul>
+					</div>
 
-						<div class="col-lg-3 col-md-6 footer-links">
-							<h4>Our Services</h4>
-							<ul>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Web Design</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Web Development</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Product Management</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Marketing</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Graphic Design</a>
-								</li>
-							</ul>
-						</div>
+					<div class="col-lg-3 col-md-6 footer-links">
+						<h4>Nos Services</h4>
+						<ul>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Vente en ligne</a>
+							</li>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Produits locaux de haute qualité</a>
+							</li>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Livraison à domicile</a>
+							</li>
+							<li>
+								<i class="bx bx-chevron-right"></i>
+								<a href="#">Événements promotionnels</a>
+							</li>
 
-						<div class="col-lg-4 col-md-6 footer-newsletter">
-							<h4>Our Newsletter</h4>
-							<p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-							<form action="" method="post">
-								<input type="email" name="email"><input type="submit" value="Subscribe">
-							</form>
+						</ul>
+					</div>
 
-						</div>
+					<div class="col-lg-4 col-md-6 footer-newsletter">
+						<h4>Our Newsletter</h4>
+						<p></p>
+						<form action="" method="post">
+							<input type="email" name="email"><input type="submit" value="Subscribe">
+						</form>
 
 					</div>
+
 				</div>
 			</div>
+		</div>
 
-			<div class="container">
-				<div class="copyright">
-					&copy; Copyright
-					<strong>
-						<span>Sailor</span>
-					</strong>. All Rights Reserved
-				</div>
-				<div class="credits">
-					<!-- All the links in the footer should remain intact. -->
-					<!-- You can delete the links only if you purchased the pro version. -->
-					<!-- Licensing information: https://bootstrapmade.com/license/ -->
-					<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-					Designed by
-						<a href="https://bootstrapmade.com/"> BootstrapMade</a>
-				</div>
+		<div class="container">
+			<div class="copyright">
+				&copy; Copyright
+				<strong>
+					<span>Elbaldi</span>
+				</strong>. All Rights Reserved
 			</div>
-		</footer>
-		<!-- End Footer -->
-
-		<a href="#" class="back-to-top d-flex align-items-center justify-content-center">
-			<i class="bi bi-arrow-up-short"></i>
-		</a>
-		{% block js%}
-			<!-- Vendor JS Files -->
-			<script src="{{asset('Front/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-			<script src="{{asset('Front/vendor/glightbox/js/glightbox.min.js')}}"></script>
-			<script src="{{asset('Front/vendor/isotope-layout/isotope.pkgd.min.js')}}"></script>
-			<script src="{{asset('Front/vendor/swiper/swiper-bundle.min.js')}}"></script>
-			<script src="{{asset('Front/vendor/waypoints/noframework.waypoints.js')}}"></script>
-			<script src="{{asset('Front/vendor/php-email-form/validate.js')}}"></script>
-
-			<!-- Template Main JS File -->
-			<script src="{{asset('Front/js/main.js')}}"></script>
-		{% endblock %}
+			<div class="credits">
+				<!-- All the links in the footer should remain intact. -->
+				<!-- You can delete the links only if you purchased the pro version. -->
+				<!-- Licensing information: https://bootstrapmade.com/license/ -->
+				<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
+				Designed by
+					<a href="https://bootstrapmade.com/"> BootstrapMade</a>
+			</div>
+		</div>
 	</body>
-</html>
+</html></footer><!-- End Footer --><a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+<i class="bi bi-arrow-up-short"></i></a>{% block js%}
+<!-- Vendor JS Files -->
+<script src="{{asset('Front/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+<script src="{{asset('Front/vendor/glightbox/js/glightbox.min.js')}}"></script>
+<script src="{{asset('Front/vendor/isotope-layout/isotope.pkgd.min.js')}}"></script>
+<script src="{{asset('Front/vendor/swiper/swiper-bundle.min.js')}}"></script>
+<script src="{{asset('Front/vendor/waypoints/noframework.waypoints.js')}}"></script>
+<script src="{{asset('Front/vendor/php-email-form/validate.js')}}"></script>
+
+<!-- Template Main JS File -->
+<script src="{{asset('Front/js/main.js')}}"></script>{% endblock %}</body></html>
