--- a/templates/question/index.html.twig
+++ b/templates/question/index.html.twig
@@ -7,6 +7,11 @@
 			<div class="col-12 mb-4 d-flex align-items-center">
 				<i class="bi bi-file-plus" style="font-size: 30px; margin-right: 5px; "></i>
 				<a href="{{ path('app_question_new') }}" class="btn btn-success custom-btn float-right">Ajouter Question</a>
+
+			</div>
+			<div class="col-12 mb-4 d-flex align-items-center">
+				<i class="bi bi-box-arrow-left" style="font-size: 30px; margin-right: 5px; "></i>
+				<a href="{{ path('app_quiz_index') }}" class="btn btn-success custom-btn float-right">Retour</a>
 			</div>
 			{% for question in questions %}
 
