--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -26,7 +26,7 @@
 
   <!-- Template Main CSS File -->
   <link href="{{asset('Front/css/style.css')}}" rel="stylesheet">
-
+body%
   <!-- =======================================================
   * Template Name: Sailor
   * Updated: Mar 10 2023 with Bootstrap v5.2.3
@@ -236,7 +236,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section ======= -->{% block body %}
     <section id="portfolio" class="portfolio">
       <div class="container">
 
@@ -383,7 +383,7 @@
 
       </div>
     </section><!-- End Portfolio Section -->
-
+{% endblock %}
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
