correction de la premiere validation

--- a/templates/categorie/_form.html.twig
+++ b/templates/categorie/_form.html.twig
@@ -1,9 +1,9 @@
 {{ form_start(form,{'attr':{'novalidate':'novalidate'}})}}
     <div class="form-group row">
-        <label for="{{ form.nom_categorie.vars.id }}" class="col-sm-2 col-form-label">{{ form.nom_categorie.vars.label }}</label>
+        <label for="{{ form.nomCategorie.vars.id }}" class="col-sm-2 col-form-label">{{ form.nomCategorie.vars.label }}</label>
         <div class="col-sm-8">
-            {{ form_widget(form.nom_categorie, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.nom_categorie) }}
+            {{ form_widget(form.nomCategorie, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.nomCategorie) }}
         </div>
     </div>
     <div class="form-group row">
