--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -12,7 +12,7 @@
                 <td>{{ categorie.id_categorie }}</td>
             </tr>
             <tr>
-                <th>Nom_categorie</th>
+                <th>Nom categorie</th>
                 <td>{{ categorie.nomCategorie }}</td>
             </tr>
             <tr>
