--- a/templates/question/index.html.twig
+++ b/templates/question/index.html.twig
@@ -6,7 +6,8 @@
 		<div class="row">
 			<div class="col-12 mb-4 d-flex align-items-center">
 				<i class="bi bi-file-plus" style="font-size: 30px; margin-right: 5px; "></i>
-				<a href="{{ path('app_question_new') }}" class="btn btn-success custom-btn float-right">Ajouter Question</a>
+				{# <a href="{{ path('app_question_new') }}" class="btn btn-success custom-btn float-right">Ajouter Question</a> #}
+				<a href="{{ path('app_question_new', {'idQuiz': quiz.getIdQuiz()}) }}" class="btn btn-success custom-btn float-right">Ajouter Question</a>
 
 
 			</div>
@@ -38,8 +39,11 @@
 								</p>
 								<div class="d-flex justify-content-end">
 									<div class="d-flex justify-content-between">
-										<a href="{{ path('app_question_edit', {'idQuestion': question.idQuestion}) }}" class="btn btn-success custom-btn mr-2">Modifier</a>
-										<form method="post" action="{{ path('app_question_delete', {'idQuestion': question.idQuestion}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+
+										<a href="{{ path('app_question_edit1', { 'idQuiz': quiz.getIdQuiz(), 'idQuestion': question.getIdQuestion() }) }}" class="btn btn-success custom-btn mr-2">Modifier</a>
+
+										<form method="post" action="{{ path('app_question_delete', {'idQuiz': quiz.idQuiz, 'idQuestion': question.idQuestion}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+
 											<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ question.idQuestion) }}">
 											<button type="submit" class="btn btn-success custom-btn">Supprimer</button>
 										</form>
